--- a/1.html
+++ b/1.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>ICS-INDIA</title>
 </head>
 <body>
@@ -32,7 +36,7 @@
             Mannarkkad <br>
             Palakkad <br>
             kerala <br>
-            PH:9188148119 <br>
+            <i class="fa fa-phone" aria-hidden="true"></i> :9188148119,9645787554<br>
         </P>
     </div>
     <div class="nike">
