--- a/2.html
+++ b/2.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
     <title>Adidas</title>
 </head>
 <body>
     <div class="logo">
-        <img src="Capture.PNG" alt="">
+        <img src="Nike_Swoosh_Logo_White_original-scaled-e1584983177808.jpg" alt="">
     </div>
     <div class="ics">
         <h1>NIKE</h1>
